009/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: 424432388155.dkr.ecr.us-east-1.amazonaws.com/app:v0.1.0
        ports:
        - containerPort: 80
