009/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: api.devopsbyexample.io
      http:
        paths:
          - backend:
              serviceName: app-service
              servicePort: 8081
            path: /
